--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
+    "swiper": "^9.2.4",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
